--- a/kube-logging/cluster-state/sentry/raw-manifests/sentry/charts/redis/templates/redis-master-statefulset.yaml
+++ b/kube-logging/cluster-state/sentry/raw-manifests/sentry/charts/redis/templates/redis-master-statefulset.yaml
@@ -88,6 +88,7 @@ spec:
           - "ReadWriteOnce"
         resources:
           requests:
-            storage: "8Gi"
+            storage: "10Gi"
+        storageClassName: "sentry-storage"
   updateStrategy:
     type: OnDelete
