--- a/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/web-service.yaml
+++ b/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/web-service.yaml
@@ -11,7 +11,7 @@ metadata:
     release: "sentry"
     heritage: "Tiller"
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 9000
     targetPort: 9000
