--- a/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/hooks/user-create.job.yaml
+++ b/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/hooks/user-create.job.yaml
@@ -12,6 +12,8 @@ metadata:
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
+    argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
     "helm.sh/hook": post-install
     "helm.sh/hook-delete-policy": "hook-succeeded,before-hook-creation"
     "helm.sh/hook-weight": "5"
