restore sentry postgres svc

--- a/kube-logging/cluster-state/sentry/raw-manifests/sentry/charts/postgresql/templates/svc.yaml
+++ b/kube-logging/cluster-state/sentry/raw-manifests/sentry/charts/postgresql/templates/svc.yaml
@@ -14,7 +14,7 @@ spec:
   ports:
   - name: postgresql
     port: 5432
-    targetPort: postgresqlq
+    targetPort: postgresql
   selector:
     app: postgresql
     release: sentry
