--- a/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/secrets.yaml
+++ b/kube-logging/cluster-state/sentry/raw-manifests/sentry/templates/secrets.yaml
@@ -14,7 +14,7 @@ data:
   
   sentry-secret: "RWJKZUdmamVGM3VXNlRaNUNEQ0llN0p0VXhMV1ZtTXJIMDhsWjc2Wg=="
   
-  smtp-password: ""
+  smtp-password: "UE84M3JoYi1TSEY="
   
   
   user-password: "WmVTaHRJTXVnT2V5a1pBWQ=="
