fixing elastic storage class

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/elasticsearch/statefulset.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/elasticsearch/statefulset.yaml
@@ -30,7 +30,7 @@ spec:
       resources:
         requests:
           storage: 500Gi
-      
+      storageClassName: "elasticsearch-storage"
   template:
     metadata:
       name: "elasticsearch-master"
