--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
@@ -14,15 +14,14 @@ metadata:
 data:
   filebeat.yml: |
     filebeat.inputs:
-    - type: docker
-      containers.ids:
-      - '*'
-      processors:
-      - add_kubernetes_metadata:
-          in_cluster: true
     - type: log
       paths:
       - /var/log/*.log
       - /var/log/syslog
+      - /var/log/pods/*/*/*.log
+      processors:
+      - add_host_metadata: ~
+      - add_kubernetes_metadata:
+          in_cluster: true
     output.elasticsearch:
       hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
