--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/daemonset.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/daemonset.yaml
@@ -40,9 +40,15 @@ spec:
         hostPath:
           path: /var/lib/filebeat-filebeat-default-data
           type: DirectoryOrCreate
+      - name: varlog
+        hostPath:
+          path: /var/log
       - name: varlibdockercontainers
         hostPath:
           path: /var/lib/docker/containers
+      - name: varlibpods
+        hostPath:
+          path: /var/lib/pods
       - name: varrundockersock
         hostPath:
           path: /var/run/docker.sock
@@ -104,8 +110,14 @@ spec:
           subPath: filebeat.yml
         - name: data
           mountPath: /usr/share/filebeat/data
+        - name: varlog
+          mountPath: /var/log
+          readOnly: true
         - name: varlibdockercontainers
           mountPath: /var/lib/docker/containers
+          readOnly: true
+        - name: varlibpods
+          mountPath: /var/lib/pods
           readOnly: true
         # Necessary when using autodiscovery; avoid mounting it otherwise
         # See: https://www.elastic.co/guide/en/beats/filebeat/master/configuration-autodiscover.html
