--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
@@ -14,11 +14,10 @@ metadata:
 data:
   filebeat.yml: |
     filebeat.inputs:
-    - type: log
-      paths:
-      - /var/log/*.log
-      - /var/log/syslog
-      - /var/log/pods/*/*/*.log
+    - type: container
+      symlinks: true
+      paths: 
+        - '/var/lib/containers/*/*.log'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
@@ -27,6 +26,12 @@ data:
           matchers:
           - logs_path:
               logs_path: /var/log/containers/
+    - type: log
+      paths:
+      - /var/log/*.log
+      - /var/log/syslog
+      processors:
+      - add_host_metadata: ~
     output.elasticsearch:
       hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
     setup.template.settings:
