--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/filebeat/configmap.yaml
@@ -17,7 +17,7 @@ data:
     - type: container
       symlinks: true
       paths: 
-        - '/var/lib/containers/*/*.log'
+        - '/var/lib/containers'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
