kube-dev refactoring to gitops; introduce argocd in kube-dev; introduce filebeat in kube-dev forwarding to kube-logging

--- a/kube-dev/cluster-bootstrap/ansible/roles/kube/tasks/main.yml
+++ b/kube-dev/cluster-bootstrap/ansible/roles/kube/tasks/main.yml
@@ -25,8 +25,11 @@
 - name: Jenkins
   import_tasks: jenkins.yml
 
+- name: ELK stack
+  import_tasks: elk-stack-logging.yml
+
 # - name: Prometheus, Alert Manager, Grafana
   # import_tasks: prometheus-monitoring.yml
 
-- name: ELK stack
-  import_tasks: elk-stack-logging.yml
+- name: Argo CD
+  import_tasks: argocd.yml
