--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "kubespray"]
-	path = kube-dev/kubespray
+	path = kube-dev/cluster-bootstrap/ansible/kubespray
 	url = https://github.com/kubernetes-sigs/kubespray.git
