--- a/kube-dev/cluster-state/filebeat/raw-manifests/configmap.yaml
+++ b/kube-dev/cluster-state/filebeat/raw-manifests/configmap.yaml
@@ -1,18 +1,27 @@
-filebeatConfig:
+---
+# Source: filebeat/templates/configmap.yaml
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: filebeat-filebeat-config
+  labels:
+    app: "filebeat-filebeat"
+    chart: "filebeat-7.3.0"
+    heritage: "Tiller"
+    release: "filebeat"
+data:
   filebeat.yml: |
     filebeat.inputs:
     - type: container
       symlinks: true
       paths: 
-        - '/var/log/containers/*.log'
+        - '/var/lib/docker/containers/*.log'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
           in_cluster: true
-          default_matchers.enabled: false
-          matchers:
-          - logs_path:
-              logs_path: /var/log/containers/
     - type: log
       paths:
       - /var/log/*.log
@@ -20,7 +29,7 @@ filebeatConfig:
       processors:
       - add_host_metadata: ~
     output.elasticsearch:
-      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-logging:9200}'
     setup.template.settings:
       index.number_of_shards: 1
       index.codec: best_compression
