--- a/kube-dev/cluster-state/filebeat/raw-manifests/values.yaml
+++ b/kube-dev/cluster-state/filebeat/raw-manifests/values.yaml
@@ -4,15 +4,11 @@ filebeatConfig:
     - type: container
       symlinks: true
       paths: 
-        - '/var/log/containers/*.log'
+        - '/var/lib/docker/containers/*.log'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
           in_cluster: true
-          default_matchers.enabled: false
-          matchers:
-          - logs_path:
-              logs_path: /var/log/containers/
     - type: log
       paths:
       - /var/log/*.log
@@ -20,7 +16,7 @@ filebeatConfig:
       processors:
       - add_host_metadata: ~
     output.elasticsearch:
-      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-logging:9200}'
     setup.template.settings:
       index.number_of_shards: 1
       index.codec: best_compression
