--- a/kube-dev/cluster-bootstrap/ansible/Dockerfile_kubespray
+++ b/kube-dev/cluster-bootstrap/ansible/Dockerfile_kubespray
@@ -17,6 +17,15 @@ RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - && \
   && apt update -y && apt-get install docker-ce -y
 # Docker
 
+# Kubectl
+ARG KUBECTL_VERSION=v1.13.2
+ENV KUBECTL_URL https://storage.googleapis.com/kubernetes-release/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
+
+RUN curl -Lo /tmp/kubectl ${KUBECTL_URL} \
+  && chmod +x /tmp/kubectl \
+  && mv /tmp/kubectl /usr/bin/kubectl
+# Kubectl
+
 # Helm
 ARG HELM_VERSION=v2.12.3
 ENV HELM_URL https://storage.googleapis.com/kubernetes-helm/helm-${HELM_VERSION}-linux-amd64.tar.gz
