kube-logging: filebeat: fix containers log path

--- a/kube-dev/cluster-state/filebeat/raw-manifests/values.yaml
+++ b/kube-dev/cluster-state/filebeat/raw-manifests/values.yaml
@@ -4,7 +4,7 @@ filebeatConfig:
     - type: container
       symlinks: true
       paths: 
-        - '/var/lib/docker/containers/*.log'
+        - '/var/lib/docker/containers/*/*.log'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
