--- a/kube-dev/cluster-state/filebeat/raw-manifests/configmap.yaml
+++ b/kube-dev/cluster-state/filebeat/raw-manifests/configmap.yaml
@@ -17,7 +17,7 @@ data:
     - type: container
       symlinks: true
       paths: 
-        - '/var/lib/docker/containers/*.log'
+        - '/var/lib/docker/containers/*/*.log'
       processors:
       - add_host_metadata: ~
       - add_kubernetes_metadata:
