--- a/kube-logging/cluster-bootstrap/ansible/requirements.txt
+++ b/kube-logging/cluster-bootstrap/ansible/requirements.txt
@@ -1,5 +1,5 @@
-ansible>=2.6.0,!=2.7.0
-jinja2>=2.9.6
-netaddr
-pbr>=1.6
-hvac
+ansible==2.7.12
+jinja2==2.10.1
+netaddr==0.7.19
+pbr==5.2.0
+hvac==0.8.2
