[kube-logging]: relaxing elastic readiness probe to YELLOW instead of GREEN since we have single node cluster

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/elasticsearch/statefulset.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/elasticsearch/statefulset.yaml
@@ -109,12 +109,12 @@ spec:
                     echo 'Elasticsearch is already running, lets check the node is healthy'
                     http "/"
                 else
-                    echo 'Waiting for elasticsearch cluster to become cluster to be ready (request params: "wait_for_status=green&timeout=1s" )'
-                    if http "/_cluster/health?wait_for_status=green&timeout=1s" ; then
+                    echo 'Waiting for elasticsearch cluster to become cluster to be ready (request params: "wait_for_status=yellow&timeout=1s" )'
+                    if http "/_cluster/health?wait_for_status=yellow&timeout=1s" ; then
                         touch ${START_FILE}
                         exit 0
                     else
-                        echo 'Cluster is not yet ready (request params: "wait_for_status=green&timeout=1s" )'
+                        echo 'Cluster is not yet ready (request params: "wait_for_status=yellow&timeout=1s" )'
                         exit 1
                     fi
                 fi
