[kube-logging]: fixing metricbeat parsing issue in kubernetes (see: https://github.com/elastic/beats/issues/8773)

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/clusterrole.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/clusterrole.yaml
@@ -14,7 +14,10 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - nodes
   - namespaces
+  - deployments
+  - replicasets
   - pods
   verbs:
   - get
