[kube-logging]: fixing metricbeat parsing in kubernetes (see https://github.com/elastic/beats/issues/8773); added events to clusterrole

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -45,6 +45,8 @@ data:
       processors:
       - add_kubernetes_metadata:
           in_cluster: true
+          labels.dedot: true
+          annotations.dedot: true
     - module: kubernetes
       enabled: true
       labels.dedot: true
