--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -14,17 +14,20 @@ metadata:
 data:
   kube-state-metrics-metricbeat.yml: |
     metricbeat.modules:
+    # State metrics from kube-state-metrics service:
     - module: kubernetes
       enabled: true
-      labels.dedot: true
       metricsets:
         - state_node
         - state_deployment
         - state_replicaset
+        - state_statefulset
         - state_pod
         - state_container
       period: 10s
       hosts: ["${KUBE_STATE_METRICS_HOSTS:kube-state-metrics:8080}"]
+      add_metadata: true
+      in_cluster: true
     output.elasticsearch:
       hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
     
@@ -32,8 +35,8 @@ data:
     system:
       hostfs: /hostfs
     metricbeat.modules:
+    # Node metrics, from kubelet:
     - module: kubernetes
-      labels.dedot: true
       metricsets:
         - container
         - node
@@ -42,16 +45,47 @@ data:
         - volume
       period: 10s
       hosts: ["localhost:10255"]
-      processors:
-      - add_kubernetes_metadata:
-          in_cluster: true
-          labels.dedot: true
-          annotations.dedot: true
+      enabled: true
+      add_metadata: true
+      in_cluster: true
+    
+    # Kubernetes events
     - module: kubernetes
       enabled: true
-      labels.dedot: true
       metricsets:
         - event
+
+    # Kubernetes API server
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - apiserver
+      hosts: ["https://${KUBERNETES_SERVICE_HOST}:${KUBERNETES_SERVICE_PORT}"]
+      
+    # Kubernetes proxy server
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - proxy
+      hosts: ["localhost:10249"]
+      period: 10s
+
+    # Kubernetes controller manager
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - controllermanager
+      hosts: ["http://localhost:10252"]
+      period: 10s
+
+    # Kubernetes scheduler
+    - module: kubernetes
+      enabled: true
+      metricsets:
+        - scheduler
+      hosts: ["localhost:10251"]
+      period: 10s
+
     - module: system
       period: 10s
       metricsets:
