[kube-logging]: fixing metricbeat config...

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -17,6 +17,7 @@ data:
     # State metrics from kube-state-metrics service:
     - module: kubernetes
       enabled: true
+      labels.dedot: true
       metricsets:
         - state_node
         - state_deployment
