--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -17,7 +17,6 @@ data:
     # State metrics from kube-state-metrics service:
     - module: kubernetes
       enabled: true
-      labels.dedot: true
       metricsets:
         - state_node
         - state_deployment
@@ -31,6 +30,7 @@ data:
       - add_kubernetes_metadata:
           in_cluster: true
           labels.dedot: true
+          annotations.dedot: true
     output.elasticsearch:
       hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
     
