--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -31,8 +31,13 @@ data:
           in_cluster: true
           labels.dedot: true
           annotations.dedot: true
-    output.elasticsearch:
-      hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
+    output.file:
+      path: "/usr/share/metricbeat/data"
+      filename: metricbeat
+      rotate_every_kb: 10000
+      number_of_files: 5    
+    # output.elasticsearch:
+    #   hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
     
   metricbeat.yml: |
     system:
