[kube-logging]: fixing metricbeat config...

--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -50,7 +50,7 @@ data:
         - system
         - volume
       period: 10s
-      hosts: ["localhost:10255"]
+      hosts: ["${NODE_IP}:10255"]
       enabled: true
       add_metadata: true
       in_cluster: true
