--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/daemonset.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/daemonset.yaml
@@ -31,6 +31,8 @@ spec:
     spec:
       serviceAccountName: metricbeat-metricbeat
       terminationGracePeriodSeconds: 30
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       volumes:
       - name: metricbeat-config
         configMap:
