--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -50,10 +50,13 @@ data:
         - system
         - volume
       period: 10s
-      hosts: ["localhost:10255"]
+      hosts: ["localhost:10250"]
       enabled: true
       add_metadata: true
       in_cluster: true
+      bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
+      ssl.certificate_authorities:
+        - /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     
     # Kubernetes events
     - module: kubernetes
