--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/daemonset.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/daemonset.yaml
@@ -95,6 +95,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         securityContext:
           privileged: false
           runAsUser: 0
