--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/deployment.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/deployment.yaml
@@ -80,6 +80,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         - name: KUBE_STATE_METRICS_HOSTS
           value: "$(KUBE_STATE_METRICS_SERVICE_HOST):$(KUBE_STATE_METRICS_SERVICE_PORT_HTTP)"
         securityContext:
