--- a/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
+++ b/kube-logging/cluster-state/elastic-stack/raw-manifests/metricbeat/configmap.yaml
@@ -39,6 +39,7 @@ data:
       hosts: '${ELASTICSEARCH_HOSTS:elasticsearch-master:9200}'
     
   metricbeat.yml: |
+    logging.level: debug
     system:
       hostfs: /hostfs
     metricbeat.modules:
