[kube-dev]: moving jenkins from default ns to jenkins ns

--- a/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-deployment.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-deployment.yaml
@@ -5,7 +5,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
