--- a/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-ingress.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-ingress.yaml
@@ -4,7 +4,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
