--- a/kube-dev/cluster-state/app-of-apps/apps/jenkins.yml
+++ b/kube-dev/cluster-state/app-of-apps/apps/jenkins.yml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: logging
+    namespace: jenkins
     server: https://kubernetes.default.svc
   project: default
   source:
