--- a/kube-dev/cluster-state/jenkins/raw-manifests/config.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/config.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: jenkins
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
