--- a/kube-dev/cluster-state/jenkins/raw-manifests/rbac.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/rbac.yaml
@@ -5,7 +5,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: jenkins-schedule-agents
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
@@ -25,7 +25,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: jenkins-schedule-agents
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
@@ -39,7 +39,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: jenkins
-  namespace: default
+  namespace: jenkins
 
 ---
 
