--- a/kube-dev/cluster-state/jenkins/raw-manifests/secret.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/secret.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: jenkins
-  namespace: default
+  namespace: jenkins
   labels:
     "app.kubernetes.io/name": 'jenkins'
     "helm.sh/chart": "jenkins-1.5.9"
