--- a/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-deployment.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/jenkins-master-deployment.yaml
@@ -36,7 +36,7 @@ spec:
       serviceAccountName: "jenkins"
       initContainers:
         - name: "copy-default-config"
-          image: "jenkins/jenkins:lts"
+          image: "jenkins/jenkins:2.176.3"
           imagePullPolicy: "Always"
           command: [ "sh", "/var/jenkins_config/apply_config.sh" ]
           env:
@@ -73,7 +73,7 @@ spec:
               name: plugin-dir
       containers:
         - name: jenkins
-          image: "jenkins/jenkins:lts"
+          image: "jenkins/jenkins:2.176.3"
           imagePullPolicy: "Always"
           args: [ "--argumentsRealm.passwd.$(ADMIN_USER)=$(ADMIN_PASSWORD)",  "--argumentsRealm.roles.$(ADMIN_USER)=admin"]
           env:
