[kube-qa-portal]: route edge server to the cluster

--- a/kube-qa-portal/cluster-bootstrap/misc/nginx/10.10.30.42/qa_in.conf
+++ b/kube-qa-portal/cluster-bootstrap/misc/nginx/10.10.30.42/qa_in.conf
@@ -3,21 +3,25 @@ map $http_upgrade $connection_upgrade {
     ''      close;
 }
 
-upstream logging_in {
-    server 10.100.20.33:31549;
+upstream qa_in {
+    server 10.100.20.102:30215;
+}
+
+upstream qa_in_443 {
+    server 10.100.20.102:31399;
 }
 
 server {
     listen  80;
 
-    server_name .logging.in.alutech24.com;
+    server_name .qa.in.alutech24.com;
 
-    access_log /var/log/nginx/logging.in.alutech24.access.log main;
-    error_log /var/log/nginx/logging.in.alutech24.error.log;
+    access_log /var/log/nginx/qa.in.alutech24.access.log main;
+    error_log /var/log/nginx/qa.in.alutech24.error.log;
 
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://logging_in;
+        proxy_pass http://qa_in;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X_Forwarded_proto $scheme;
@@ -32,17 +36,17 @@ server {
 server {
     listen 443 ssl;
 
-    server_name .logging.in.alutech24.com;
+    server_name .qa.in.alutech24.com;
 
     ssl_certificate /etc/nginx/certs/alutech24_com_2019_07_10.crt;
     ssl_certificate_key /etc/nginx/certs/alutech24_com_2019_07_10_private.key;
 
-    access_log /var/log/nginx/logging.in.alutech24.access.log main;
-    error_log /var/log/nginx/logging.in.alutech24.error.log;
+    access_log /var/log/nginx/qa.in.alutech24.access.log main;
+    error_log /var/log/nginx/qa.in.alutech24.error.log;
 
     location / {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://logging_in;
+        proxy_pass http://qa_in_443;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X_Forwarded_proto $scheme;
