[kube-dev]: <jenkins>: cluster-metadata secret that contains cluster base domain

--- a/kube-dev/cluster-state/jenkins/raw-manifests/secret.yaml
+++ b/kube-dev/cluster-state/jenkins/raw-manifests/secret.yaml
@@ -15,3 +15,12 @@ type: Opaque
 data:
   jenkins-admin-password: "WE9XYkF1Zm82bA=="
   jenkins-admin-user: "YWRtaW4="
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: cluster-metadata
+  namespace: jenkins
+type: Opaque
+data:
+  base_domain: "a3ViZS1kZXYuaW4uYWx1dGVjaDI0LmNvbQ=="
