[kube-dev]: deploy argocd and app-of-apps from ansible local files; move to alutech git repo

--- a/kube-dev/cluster-bootstrap/ansible/roles/kube/tasks/argocd.yml
+++ b/kube-dev/cluster-bootstrap/ansible/roles/kube/tasks/argocd.yml
@@ -3,12 +3,7 @@
   ignore_errors: true
 
 - name: Deploy Argo CD
-  command: kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/v1.1.2/manifests/install.yaml
-
-- name: Download cluster state from git repo
-  git:
-    repo: https://github.com/pavel-mikhalchuk/kubespray-sandbox.git
-    dest: /tmp/infra-git-repo
+  command: kubectl apply -n argocd -f "{{ role_path }}/files/argocd/v1.2.1-non-ha.yaml"
 
 - name: Register Argo CD App of Apps
-  command: kubectl apply -n argocd -f /tmp/infra-git-repo/kube-dev/cluster-state/app-of-apps/app.yml
+  command: kubectl apply -n argocd -f "{{ role_path }}/files/argocd/app-of-apps.yaml"
